# bevy_center

./: Cargo.toml  README.md
.github/workflows/: build.yml  doc.yml  rust.yml
src/: center_marker.rs  lib.rs
